mobile.css
/* mobile */
@media (max-width: 768px) {
    :root {
        --width: 90%;
    }
    nav {
        height: auto;
        margin-top: 20px;
    }
    aside {
        width: 100%;
    }
    article {
        width: 100%;
        height: 200%;
        margin: 0;
        padding: 15px;
        position: absolute;
        top: 0;
        left: 0;
        display: none;
    }
    #back-to-main-screen {
        display: block;
    }
    button {
        margin-bottom: 8px;
        margin-right: 5px;
    }
    
    main {
        display: block;
    }
}

